--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@ flexibility(document.documentElement);
 				</div>
 				<div class="elementor-element elementor-element-22015e8 elementor-widget-mobile__width-initial elementor-widget elementor-widget-heading" data-id="22015e8" data-element_type="widget" data-widget_type="heading.default">
 				<div class="elementor-widget-container">
-					<h4 class="elementor-heading-title elementor-size-default">Get Expert For- Office 365, Windows OS Help, Outlook Help, Fix PC, Application Issue<br>
+					<h4 class="elementor-heading-title elementor-size-default">Get Expert For- Office 365, Windows Support, Outlook Help, PC Repair<br>
 </h4>				</div>
 				</div>
 				<div class="elementor-element elementor-element-445e6fb elementor-align-center elementor-widget elementor-widget-button" data-id="445e6fb" data-element_type="widget" data-widget_type="button.default">
