--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
 
   gtag('config', 'AW-11548868062');
 </script>
+	<!-- Begin Web-Stat code v 7.0 -->
+<span id="wts2194666"></span>
+<script>var wts=document.createElement('script');wts.async=true;
+wts.src='https://app.ardalio.com/log7.js';document.head.appendChild(wts);
+wts.onload = function(){ wtslog7(2194666,4); };
+</script><noscript><a href="https://www.web-stat.com">
+<img src="https://app.ardalio.com/7/4/2194666.png" 
+alt="Web-Stat site statistics"></a></noscript>
+<!-- End Web-Stat code v 7.0 -->
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="profile" href="https://gmpg.org/xfn/11"> 
